adds: images and font links

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,900&family=Monoton&display=swap"
+     rel="stylesheet">
     <title>Pizza Pal</title>
 </head>
 <body>
     <header>
-
+        <div id="banner">
+            <img src="/assets/shourav-sheikh-a66sGfOnnqQ-unsplash.jpg" alt="" class="imageBanner">
+            <h1>PIZZA PAL</h1>
+        </div>
     </header>
     <main>
 
