adds: banner and navbar

--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 </head>
 <body>
     <header>
+        <div>
+            <nav class="navBar" id="nav-link">
+                <a href="#nav-link" class="active" style="padding-left: 120px;">Home</a>
+                <a href="#shop-link" >Shop</a>
+                <a href="#contacts-link" >Contacts</a>
+            </nav>
+        </div>
+    
         <div id="banner">
             <img src="/assets/shourav-sheikh-a66sGfOnnqQ-unsplash.jpg" alt="" class="imageBanner">
-            <h1>PIZZA PAL</h1>
+            <div id="bannerContent">
+                <h1 class="bannerTitle">PIZZApal</h1>
+                <h3 id="bannerDesc">Pizza Anywhere Anytime !!</h3>
+            </div>
         </div>
     </header>
     <main>
