--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <header>
         <div>
             <nav class="navBar" id="nav-link">
+                <h4 class="logo">Pizzapal</h4>
+                <div class="links">
                 <a href="#nav-link" class="active" style="padding-left: 120px;">Home</a>
                 <a href="#shop-link" >Shop</a>
                 <a href="#contacts-link" >Contacts</a>
+                </div>
             </nav>
         </div>
     
