--- a/index.html
+++ b/index.html
@@ -31,12 +31,31 @@
             </div>
         </div>
     </header>
-    <main>
 
+    <main>
+        <div class="shopSection">
+            <div class="pizza1">
+                <img src="/assets/fernando-andrade-_P76trHTWDE-unsplash.jpg" alt="pizza 1">
+                <div class="pizza1Content">
+                    <h3>Pepperoni Pizza</h3>
+                    <p class="pizza1Para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non, cupiditate incidunt aliquam saepe, voluptatum mollitia quibusdam minus sunt suscipit nemo quasi neque rerum perferendis magnam! Optio dolorem sapiente ad!</p>
+                    <div>
+                        <h4>Sizes</h4>
+                        <form action="" class="pizzaForm" id="pizza1Form">
+                            <input type="buuton" value="small">
+                            <input type="buuton" value="medium">
+                            <input type="buuton" value="large">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+
     <footer>
 
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/js/jquery-3.6.0.js" type="text/javascript"></script>
