adds: contact section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,900&family=Monoton&display=swap"
      rel="stylesheet">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Pizza Pal</title>
 </head>
 <body>
@@ -17,8 +18,8 @@
                 <h4 class="logo">Pizzapal</h4>
                 <div class="links">
                 <a href="#nav-link" class="active" style="padding-left: 120px;">Home</a>
-                <a href="#shop-link" >Shop</a>
-                <a href="#contacts-link" >Contacts</a>
+                <a href="#shopSection-link" >Shop</a>
+                <a href="#contactsSection" >Contacts</a>
                 </div>
             </nav>
         </div>
@@ -33,7 +34,7 @@
     </header>
 
     <main>
-        <div class="shopSection">
+        <div id="shopSection-link">
             <h2 class="titleSection">Shop</h2>
             <div class="pizza1">
                 <img src="/assets/fernando-andrade-_P76trHTWDE-unsplash.jpg" alt="pizza 1" class="pizza1Image">
@@ -206,7 +207,20 @@
                 </div>
             </div> 
             
-        </div>    
+        </div> 
+        
+            <div id="contactsSection">
+            <h2 class="titleSection">Contacts</h2>
+                    <p class="contactsContent" >
+                        SHOPS: 24th Ave., NAIROBI.
+                    </p>
+            <div class="contactsCont">
+                <a href="tel:+254729160861" class="fa fa-phone-square"></a>
+                <a href="https://api.whatsapp.com/send?phone=254778593480" class="fa fa-whatsapp"></a>
+                <a href="https://www.instagram.com/gitau_ngina/" class="fa fa-instagram"></a>
+                <a href="https://www.linkedin.com/in/ngina-gitau-9319bb180" class="fa fa-linkedin-square"></a>
+            </div>
+        </div>
     </main>
 
     <footer>
