adds objects to scrit

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div action="" class="selectCont">
                                 <h4 style="text-align:center; font-family: 'Lato', sans-serif; font-weight: 400; font-size: .8rem; margin-bottom: -.5em;">Extra Toppings</h4>
                                 <select>
-                                    <option type="button" value="olives" class="select-items">none</option>
+                                    <option type="button" value="none" class="select-items">none</option>
                                     <option type="button" value="olives" class="select-items">olives</option>
                                     <option type="button" value="cheese" class="select-items">cheese</option>
                                     <option type="button" value="mince" class="select-items">mince</option>
@@ -95,7 +95,7 @@
                             <div action="" class="selectCont">
                                 <h4 style="text-align:center; font-family: 'Lato', sans-serif; font-weight: 400; font-size: .8rem; margin-bottom: -.5em;">Extra Toppings</h4>
                                 <select>
-                                    <option type="button" value="olives" class="select-items">none</option>
+                                    <option type="button" value="none" class="select-items">none</option>
                                     <option type="button" value="olives" class="select-items">olives</option>
                                     <option type="button" value="cheese" class="select-items">cheese</option>
                                     <option type="button" value="mince" class="select-items">mince</option>
@@ -138,7 +138,7 @@
                             <div action="" class="selectCont">
                                 <h4 style="text-align:center; font-family: 'Lato', sans-serif; font-weight: 400; font-size: .8rem; margin-bottom: -.5em;">Extra Toppings</h4>
                                 <select>
-                                    <option type="button" value="olives" class="select-items">none</option>
+                                    <option type="button" value="none" class="select-items">none</option>
                                     <option type="button" value="olives" class="select-items">olives</option>
                                     <option type="button" value="cheese" class="select-items">cheese</option>
                                     <option type="button" value="mince" class="select-items">mince</option>
@@ -181,7 +181,7 @@
                             <div action="" class="selectCont">
                                 <h4 style="text-align:center; font-family: 'Lato', sans-serif; font-weight: 400; font-size: .8rem; margin-bottom: -.5em;">Extra Toppings</h4>
                                 <select>
-                                    <option type="button" value="olives" class="select-items">none</option>
+                                    <option type="button" value="none" class="select-items">none</option>
                                     <option type="button" value="olives" class="select-items">olives</option>
                                     <option type="button" value="cheese" class="select-items">cheese</option>
                                     <option type="button" value="mince" class="select-items">mince</option>
@@ -210,7 +210,7 @@
         
         <div id="ckeckout">
             <div>
-                
+
             </div>
         </div>
     </main>
