--- a/index.html
+++ b/index.html
@@ -43,29 +43,31 @@
                     <p class="pizza1Para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non, cupiditate incidunt aliquam saepe, voluptatum mollitia quibusdam minus sunt suscipit nemo quasi neque rerum perferendis magnam! Optio dolorem sapiente ad!</p>
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
-                        <form action="" class="pizzaForm">
-                            <input type="button" value="small" class="pizza1Btn">
-                            <input type="button" value="medi" class="pizza1Btn">
-                            <input type="button" value="large" class="pizza1Btn">
-                        </form>
+                        <div class="pizzaForm">
+                            <select>
+                                <option type="button" value="small" class=" select-items pizza1Btn">small</option>
+                                <option type="button" value="medi" class=" select-items pizza1Btn">medi</option>
+                                <option type="button" value="large" class=" select-items pizza1Btn">large</option>
+                            </select>
+                        </div>
 
                         <div class="pizzaExtras">
                             <div action="" class="selectCont">
                                 <h4 style="text-align:center; font-family: 'Lato', sans-serif; font-weight: 400; font-size: .8rem; margin-bottom: -.5em;">Extra Toppings</h4>
                                 <select>
-                                    <option type="button" value="none" class="select-items">none</option>
-                                    <option type="button" value="olives" class="select-items">olives</option>
-                                    <option type="button" value="cheese" class="select-items">cheese</option>
-                                    <option type="button" value="mince" class="select-items">mince</option>
+                                    <option class="toppings" type="button" value="none" class="select-items">none</option>
+                                    <option class="toppings" type="button" value="olives" class="select-items">olives</option>
+                                    <option class="toppings" type="button" value="cheese" class="select-items">cheese</option>
+                                    <option class="toppings" type="button" value="mince" class="select-items">mince</option>
                                 </select>
                             </div>
 
                             <div action="" class="selectCont">
                                 <h4 style="text-align:center; font-family: 'Lato', sans-serif; font-weight: 400; font-size: .8rem; margin-bottom: -.5em;">Crust</h4>
                                 <select>
-                                    <option type="button" value="cheese" class="select-items">classic</option>
-                                    <option type="button" value="olives" class="select-items">thin</option>
-                                    <option type="button" value="mince" class="select-items">thick</option>
+                                    <option class="crust" type="button" value="cheese" class="select-items">classic</option>
+                                    <option class="crust" type="button" value="olives" class="select-items">thin</option>
+                                    <option class="crust" type="button" value="mince" class="select-items">thick</option>
                                 </select>
                                 
                             </div>
@@ -85,11 +87,13 @@
                     <p class="pizza1Para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non, cupiditate incidunt aliquam saepe, voluptatum mollitia quibusdam minus sunt suscipit nemo quasi neque rerum perferendis magnam! Optio dolorem sapiente ad!</p>
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
-                        <form action="" class="pizzaForm" id="pizza1Form">
-                            <input type="button" value="small" class="pizza1Btn">
-                            <input type="button" value="medium" class="pizza1Btn">
-                            <input type="button" value="large" class="pizza1Btn">
-                        </form>
+                        <div class="pizzaForm">
+                            <select>
+                                <option type="button" value="small" class=" select-items pizza1Btn">small</option>
+                                <option type="button" value="medi" class=" select-items pizza1Btn">medi</option>
+                                <option type="button" value="large" class=" select-items pizza1Btn">large</option>
+                            </select>
+                        </div>
                         
                         <div class="pizzaExtras">
                             <div action="" class="selectCont">
@@ -128,11 +132,13 @@
                     <p class="pizza1Para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non, cupiditate incidunt aliquam saepe, voluptatum mollitia quibusdam minus sunt suscipit nemo quasi neque rerum perferendis magnam! Optio dolorem sapiente ad!</p>
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
-                        <form action="" class="pizzaForm" id="pizza1Form">
-                            <input type="button" value="small" class="pizza1Btn">
-                            <input type="button" value="medium" class="pizza1Btn">
-                            <input type="button" value="large" class="pizza1Btn">
-                        </form>
+                        <div class="pizzaForm">
+                            <select>
+                                <option type="button" value="small" class=" select-items pizza1Btn">small</option>
+                                <option type="button" value="medi" class=" select-items pizza1Btn">medi</option>
+                                <option type="button" value="large" class=" select-items pizza1Btn">large</option>
+                            </select>
+                        </div>
 
                         <div class="pizzaExtras">
                             <div action="" class="selectCont">
@@ -171,11 +177,13 @@
                     <p class="pizza1Para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non, cupiditate incidunt aliquam saepe, voluptatum mollitia quibusdam minus sunt suscipit nemo quasi neque rerum perferendis magnam! Optio dolorem sapiente ad!</p>
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
-                        <form action="" class="pizzaForm" id="pizza1Form">
-                            <input type="button" value="small" class="pizza1Btn">
-                            <input type="button" value="medium" class="pizza1Btn">
-                            <input type="button" value="large" class="pizza1Btn">
-                        </form>
+                        <div class="pizzaForm">
+                            <select>
+                                <option type="button" value="small" class=" select-items pizza1Btn">small</option>
+                                <option type="button" value="medi" class=" select-items pizza1Btn">medi</option>
+                                <option type="button" value="large" class=" select-items pizza1Btn">large</option>
+                            </select>
+                        </div>
 
                         <div class="pizzaExtras">
                             <div action="" class="selectCont">
