adds size selection

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
                         <div class="pizzaForm">
-                            <select>
+                            <select id="selectSize1" onchange="pizzaValue()">
                                 <option label="small" value="700" class=" select-items pizza1Btn">small</option>
                                 <option label="medi" value="1000" class=" select-items pizza1Btn">medi</option>
                                 <option label="large" value="1200" class=" select-items pizza1Btn">large</option>
@@ -54,7 +54,7 @@
                         <div class="pizzaExtras">
                             <div action="" class="selectCont">
                                 <h4 style="text-align:center; font-family: 'Lato', sans-serif; font-weight: 400; font-size: .8rem; margin-bottom: -.5em;">Extra Toppings</h4>
-                                <select>
+                                <select id="selectToppings">
                                     <option value="0" label="none" class="select-items">none</option>
                                     <option value="100" label="olives" class="select-items">olives</option>
                                     <option value="200" label="cheese" class="select-items">cheese</option>
@@ -88,7 +88,7 @@
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
                         <div class="pizzaForm">
-                            <select>
+                            <select class="selectSize">
                                 <option value="700" label="small" class=" select-items pizza1Btn">small</option>
                                 <option value="1000" label="medi" class=" select-items pizza1Btn">medi</option>
                                 <option value="1200" label="large" class=" select-items pizza1Btn">large</option>
@@ -133,7 +133,7 @@
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
                         <div class="pizzaForm">
-                            <select>
+                            <select class="selectSize">
                                 <option value="700" label="small" class=" select-items pizza1Btn">small</option>
                                 <option value="1000" label="medi" class=" select-items pizza1Btn">medi</option>
                                 <option value="1200" label="large" class=" select-items pizza1Btn">large</option>
@@ -178,7 +178,7 @@
                     <div class="pizza1Form">
                         <h4 style="font-family: 'Bangers', cursive; font-weight: 400; font-size: 1.5em;">Sizes</h4>
                         <div class="pizzaForm">
-                            <select>
+                            <select class="selectSize">
                                 <option value="700" label="small" class=" select-items pizza1Btn">small</option>
                                 <option value="1000" label="medi" class=" select-items pizza1Btn">medi</option>
                                 <option value="1200" label="large" class=" select-items pizza1Btn">large</option>
